--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.12",
     "@types/react-test-renderer": "^18.0.7"
   },
@@ -33,6 +34,7 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
+    "setupFilesAfterEnv": ["<rootDir>/jest-setup.ts"],
     "collectCoverage": true,
     "collectCoverageFrom": [
       "**/*.{ts,tsx}",
