add e2e test with detox

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,11 @@ allprojects {
             url(new File(['node', '--print', "require.resolve('jsc-android/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim(), '../dist'))
         }
 
+        maven {
+            // Artefados do Detox para o node_module
+            url "$rootDir/../node_modules/detox/Detox-android"
+        }
+
         google()
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
