--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,6 +92,10 @@ android {
         versionName "1.0"
 
         buildConfigField("boolean", "REACT_NATIVE_UNSTABLE_USE_RUNTIME_SCHEDULER_ALWAYS", (findProperty("reactNative.unstable_useRuntimeSchedulerAlways") ?: true).toString())
+
+        // Novas dependencias para rodar os testes Detox.
+        testBuildType System.getProperty('testBuildType', 'debug')
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     signingConfigs {
         debug {
@@ -164,6 +168,10 @@ dependencies {
     }
 
     implementation("com.facebook.react:flipper-integration")
+
+    // Novas dependencias para rodar os testes Detox.
+    androidTestImplementation('com.wix:detox:+') { transitive = true }
+    androidTestImplementation 'junit:junit:4.12'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
